--- a/src/app/flowchart/flowchart.component.scss
+++ b/src/app/flowchart/flowchart.component.scss
@@ -1,7 +1,8 @@
 #flow-chart {
-    width: 100vw;
+    width: 100%;
     height: 400px;
     overflow: auto;
+    position: relative;
     background-color: rgb(201, 198, 198);
 }  
 
@@ -26,11 +27,12 @@
     // }
 }
 
+
+
 ::ng-deep .line {
     position: absolute;
     background-color: #a2a2a2;
     height: 5px;
-    width: 100px;
 }
 
 ::ng-deep .circle {
