--- a/src/app/flowchart/flowchart.component.scss
+++ b/src/app/flowchart/flowchart.component.scss
@@ -1,18 +1,19 @@
 #flow-chart {
     width: 100%;
-    height: 400px;
+    height: 500px;
     overflow: auto;
     position: relative;
-    background-color: rgb(201, 198, 198);
+    background-color: rgb(231, 231, 231);
 }  
 
 ::ng-deep .rectangle {
     position: absolute;
-    border: 5px solid #a2a2a2;
-    color: black;
+    border: 3px solid #a2a2a2;
+    color: #a2a2a2;
     width: 300px;
     height: 200px;
     padding: 1.0rem;
+    overflow: auto;
 
     // .header {
 
@@ -27,18 +28,23 @@
     // }
 }
 
-
-
 ::ng-deep .line {
     position: absolute;
     background-color: #a2a2a2;
-    height: 5px;
+    height: 3px;
 }
 
 ::ng-deep .circle {
     position: absolute;
-    border: 5px solid #a2a2a2;
+    border: 3px solid #a2a2a2;
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+}
+
+::ng-deep .children-list {
+    position: absolute;
+    background: #6f6a68;
+    z-index: 9;
+    width: 150px;
+    height: 300px;
+    padding: 0.5rem;
 }
