--- a/src/app/flowchart-canvas/flowchart-canvas.component.html
+++ b/src/app/flowchart-canvas/flowchart-canvas.component.html
@@ -1,3 +1,12 @@
 <div class="canvas-wrapper" #canvasWrapper>
     <canvas #canvas></canvas>
+    <div class="children-list-wrapper" #childrenListWrapper>
+        <div class="header">Maximum 3 selection</div>
+        <ul class="children-list" #childrenList>
+        </ul>
+        <div class="footer">
+            <button class="btn" (click)="hideSelectionsMenu()">Cancel</button>
+            <button class="btn">Show selections</button>
+        </div>
+    </div>
 </div>
